; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_downmix_info.c_av_downmix_info_update_side_data.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_downmix_info.c_av_downmix_info_update_side_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@AV_FRAME_DATA_DOWNMIX_INFO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @av_downmix_info_update_side_data(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @AV_FRAME_DATA_DOWNMIX_INFO, align 4
  %7 = call %struct.TYPE_4__* @av_frame_get_side_data(i32* %5, i32 %6)
  store %struct.TYPE_4__* %7, %struct.TYPE_4__** %4, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %9 = icmp ne %struct.TYPE_4__* %8, null
  br i1 %9, label %14, label %10

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* @AV_FRAME_DATA_DOWNMIX_INFO, align 4
  %13 = call %struct.TYPE_4__* @av_frame_new_side_data(i32* %11, i32 %12, i32 4)
  store %struct.TYPE_4__* %13, %struct.TYPE_4__** %4, align 8
  br label %14

14:                                               ; preds = %10, %1
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %16 = icmp ne %struct.TYPE_4__* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %14
  store i32* null, i32** %2, align 8
  br label %23

18:                                               ; preds = %14
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = inttoptr i64 %21 to i32*
  store i32* %22, i32** %2, align 8
  br label %23

23:                                               ; preds = %18, %17
  %24 = load i32*, i32** %2, align 8
  ret i32* %24
}

declare dso_local %struct.TYPE_4__* @av_frame_get_side_data(i32*, i32) #1

declare dso_local %struct.TYPE_4__* @av_frame_new_side_data(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
